<resources>
    <string name="app_name">Fish On</string>
    <string name="start_journey_icon">Click anywhere to start your journey</string>
    <string name="application_start_image">Application start image</string>
    <string name="fish_me_next_quote">Fish me next quote</string>
    <string name="fishing_quote">Fishing Quote</string>
    <string name="sea_fishing">sea_fishing</string>
    <string name="river_fishing">river_fishing</string>
    <string name="lake_fishing">lake_fishing</string>
    <string name="your_personal_records">Your personal records:</string>
    <string name="adding_new_record">Adding new record</string>
    <string name="personal_record_image">Personal record image</string>
    <string name="add_new_record_tip_message">You can add your new personal record by clicking the plus icon.</string>
    <string name="you_must_fill_in_all_of_the_fields">You must fill in all of the fields.</string>
    <string name="adding_new_visited_place">Adding new visited place</string>
    <string name="adding_new_place_to_wish_list">Adding new location to wish list</string>
    <string name="add">ADD</string>
    <string name="modern_history_image">Modern history image</string>
    <string name="early_history_image">Early history image</string>
    <string name="pre_history_image">Pre history image</string>
    <string name="about_picture">About picture</string>
    <string name="sound">Sound</string>
    <string name="about_activity_information">\t\tThis application\'s idea was born by a lifelong passion of fishing.\n
        \t\tEvery fisherman at a given time in his life tries to remember the good old days when he was out fishing,
        enjoying a nice trip to the local creek. Maybe a long forgotten fishing spot or particular trophy catch?!\n\t\t\"Fish On\"
        lets you keep in track your fishing journey from the beginning till present day. You want to keep
        where you have already gone fishing or the places you want to visit next? This application lets you do that and
        much more. You can keep track of your personal records and store information about what species is the trophy
        catch, how much it weighs, its length and more…\n\t\tYou can learn more about the history of fishing, how it all started
        way back in the past till the modern days, check out the different types of fishing and their differences, learn basic
        tactics and maybe you can see yourself trying or learning something new.\n\t\tYou can also check out our  \"Home\" section
        where you can have a good laugh at a fishing quote to brighten up your day.\n\n\nKeep calm and Fish On</string>
    <string name="lake_fishing_information">\t\tLake fishing is when you fish a body of water that is classified to be a lake. A lake is classified as a body of relatively still water that is almost completely surrounded by land
        with a river or stream that feeds into it or drains from it. A lake that has fish that you can catch can either be man-made or natural, with natural lakes tending to have
                more successful results. There is not an international standard used to define the difference between a lake and a pond. Many people believe the difference between the two can either be size,
        how water is fed into it or a combination of both. Just because lakes are land locked doesn’t mean they are all freshwater. A lake can have a high concentration of salt, two examples are the Great Salt
        Lake and Lake Urmia. Depending on the concentration of salt, fish may or may not be able to survive or reach sufficient size to be worthy for fishing. Lakes, just like ponds, rivers and all other bodies
        of water will have creel limits. A creel limit is the amount of fish and/or size of fish you’re allowed to remove from that lake per day.\n\nLake Fishing Tips, Tricks and Techniques\n\nAre you ready to get
        out on the lake and catch some fish? Before you go you might want to read and use some of our lake fishing tips below. While these won’t be specific to any certain fish species, they can be used in
        combination with our fishing tips to make you a more skillful angler.\n\t\t- Inlets and Outlets are your Friend – Like humans, fish like specific temperatures and will generally hang around areas of a lake that
        they find comfortable. Places where water enters or drains from a lake will generally be much cooler and favorable to fish. \n\t\t- Bait fish like to hang around these areas, along with the big monster fish
        that eat them.\n\t\t- Choose the Right Bait – You can’t go wrong with natural freshwater bait such as cricket, worms, minnows, and leeches. Live bait can also be quite affordable. For example, Amazon has a
        great deal on live crickets. For artificial lures, we recommend fishing jigs. They are the most versatile in lakes because they can catch just about any type of freshwater fish. Our brand of choice is
        the Terminator Pro’s Jig.\n\t\t- As the Heat Index Rises – The hotter it gets outside the deeper you’ll need to fish. This is because fish tend to like cool temperatures and will retreat to deeper, cooler water
        as the temperature outside rises. During dusk and dawn fish will come to more shallow water to feed, some more shallow than others. You should research the specific type of fish you’re trying to catch
        in order to learn more.\n\t\t- Find Sunken Structures – Fish like to hang around structures that make them feel safe and that provide the opportunity to ambush other fish. Structures such as downed
                trees, branches and even man-made fish habitats are a great place to fish. You can easily build your own structure if you buy a kit such as the Cedars Porcupine Fish Attractor.\n\t\t- Look for
                 Weeds – A lot of big fish, like largemouth bass and northern pike, like to ambush their prey from a nice comfy weed bed. Locate some weed beds in the lake your fishing in and try getting your bait
                and/or lure in that area to see if you can coax a fish to bite. The weed beds that lead to deeper water and create a break line are the best honey pots.\n\t\t- Work with the Wind – On days with a strong
                breeze you can expect the bait fish to get pushed closer to shore, meaning the big fish will come closer to shore to feed. Watch for drift lines and follow them, they will lead to bait fish, which will
               in turn lead to big fish.\n</string>
    <string name="river_fishing_information">
\t\tRiver fishing is the method of fishing in a body of water that is defined by science to be a river. A river is a body of water that flows towards another river, ocean, lake or sea. You can fish a river from
        the shore, by wading or if the size and depth of the river make it possible, via a boat. A wide variety of different species of fish (including popular game fish) can be found inhabiting rivers or at
        least navigating them in order to reach spawning grounds or to catch fish when they migrate. Fishermen will need to use specific types of fishing rigs or bait casting methods due to the natural movement
        of a river. Rivers are used by invasive species to invade other bodies of water making it vital for humans to never introduce any foreign fish or bait fish to rivers.\n\t\tRiver fishing has a bad rap in
        some areas, especially rivers that run through urban areas. This is due to pollution and lack of water clarity. While pollution is an issue in urban areas, water clarity is just the result of sediment
        and mud being brought up from the movement of the water. Fishermen should always be aware of any advisories that are made by local or state agencies regarding the consumption of fish in specific
        rivers. Many rivers have dams and water locks that help control the flow of water. These structures can be a great place for large fish to congregate because of the water depth and temperature.\n\nRiver
        Fishing Tips, Tricks and Techniques\n\n\t\t- Get a Pair of Polarized Glasses – Depending on what river you plan on fishing in you may be able to see through the water with a good pair of polarized
        glasses. By being able to visually locate fish you can prevent a lot of wasted time searching for them.\n\t\t- Bottom Bounce Live Bait – An effective method for catching fish in a river is to use live
        bait and bounce it off the bottom. There are several types of fishing rigs that can accomplish this and will help present your bait more naturally. We recommend using the Carolina Rig. Also, sure you
        bounce your live bait with the current, and never against it.\n\t\t- Find the River’s Backwaters – Some of the most popular game fish that can be found in a river aren’t too fond of heavy currents.
        Largemouth bass are a great example of game fish that will inhabit backwater creeks that break off the river and reenter it downstream.\n\t\t- Find the Weeds – If you can locate a calm area of a river
        that has weed growth then you’ve most likely found a prime fishing location. Since weeds aren’t very common in rivers, fish will group together in calm areas of the river with weed growth. Don’t be
        shocked to find a monster largemouth bass hiding in one of these areas.\n\t\t- Fish Near the Islands – A lot of rivers will have islands in them and the slack area of these islands can hold some nice
        fish for you to catch. Be careful trying to wade out to any river islands because drop offs can appear out of nowhere and send you and your tackle downriver.\n\t\t- Talk to the Locals – The local bait
        and tackle shop or even fishermen along the shore can give you some great insight on what the best methods are for fishing in a nearby river. The actual location of fish in a river can be greatly
        affected by the weather and the moon. Locals who fish in the river often will be able to educate you on the best time and location to fish in the river.
    </string>
    <string name="species_hint">Species</string>
    <string name="country_hint">Country</string>
    <string name="year_caught_hint">Year caught</string>
    <string name="weight_in_kg_hint">Weight in kg.</string>
    <string name="length_in_metres_hint">Length in metres</string>
</resources>