<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.personalrecords.AddNewFishRecordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/t_drawer_toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_fill_all_fields_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t_drawer_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:paddingBottom="@dimen/MediumPadding"
        android:paddingEnd="@dimen/MediumPadding"
        android:paddingStart="@dimen/MediumPadding"
        android:paddingTop="@dimen/MediumPadding"
        android:text="@string/you_must_fill_in_all_of_the_fields"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/MediumText" />

    <EditText
        android:id="@+id/et_add_fish_species_field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_fill_all_fields_message"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/MediumMargin"
        android:hint="@string/species_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_add_country_caught__field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_add_fish_species_field"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/MediumMargin"
        android:hint="@string/country_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_add_year_caught_field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_add_country_caught__field"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/MediumMargin"
        android:hint="@string/year_caught_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_add_weight_field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_add_year_caught_field"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/MediumMargin"
        android:hint="@string/weight_in_kg_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_add_length_field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_add_weight_field"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/MediumMargin"
        android:hint="@string/length_in_metres_hint"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_add_fish_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_add_length_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/BigMargin"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/add" />
</RelativeLayout>